--- a/style.css
+++ b/style.css
@@ -5,32 +5,52 @@
     box-sizing: border-box;
   }
   
+  @media screen and (max-width: 800px){
+    
   body {
     font-family: Arial, sans-serif;
-    background-color: #f2faff;
+    background-color: #007BFF;
     color: #333;
   }
   
   h1 {
-    color: #007BFF;
+    color: white;
+    padding: 100px 0 10px;
+    font-size: 25px;
   }
   
+  p{
+    color: #ccc;
+    font-size: 15px;
+    padding: 15px;
+  }
+
   .screen {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 60vh;
     flex-direction: column;
     text-align: center;
   }
 
   .login-form{
-    display: flex;
-    justify-content: center;
+    margin: 20px 40px;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 10px;
     align-items: center;
     flex-direction: column;
   }
   
+  .login-form p{
+    color: #333;
+  }
+  img{
+    border-radius: 100%;
+    width: 15%;
+  }
+
   .hidden {
     display: none;
   }
@@ -39,7 +59,7 @@
     background-color: #007BFF;
     color: white;
     border: none;
-    padding: 10px 20px;
+    padding: 10px 25%;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
@@ -58,15 +78,30 @@
     width: 250px;
   }
   
+  .progress{
+    border: 2px white solid;
+    border-radius: 20px;
+    padding: 10px 20%;
+  }
   .progress-bar {
     display: inline-block;
-    background-color: #007BFF;
-    color: white;
+    background-color: #fff;
+    color: #007BFF;
     padding: 5px;
     border-radius: 10px;
   }
   
+  .subjects{
+    background-color: white;
+    padding: 10px 60px;
+    border-radius: 10px;
+  }
   .subjects button {
+    background-color: #fff;
+    color: #0056b3;
+    padding: 5px 20px;
+    display: flex;
+    flex-direction: column;
     margin: 5px;
   }
   
@@ -80,3 +115,4 @@
     margin-top: 20px;
   }
   
+  }
