--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /* Reset básico */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 800px){
   
-  @media screen and (max-width: 800px){
-    
   body {
     font-family: Arial, sans-serif;
     background-color: #007BFF;
@@ -25,7 +25,7 @@
     padding: 15px;
   }
 
-  .screen {
+  .tela {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,7 +34,89 @@
     text-align: center;
   }
 
-  .login-form{
+  .formulario-login{
+    margin: 20px 40px;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  .formulario-login p{
+    color: #333;
+  }
+  img{
+    border-radius: 100%;
+    width: 15%;
+  }
+
+  .oculta {
+    display: none;
+  }
+  
+  button {
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    padding: 10px 25%;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 20px;
+  }
+  
+  button:hover {
+    background-color: #0056b3;
+  }
+  
+  input {
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 250px;
+  }
+  
+  .progresso{
+    border: 2px white solid;
+    border-radius: 20px;
+    padding: 10px 20%;
+  }
+  .barra-progresso {
+    display: inline-block;
+    background-color: #fff;
+    color: #007BFF;
+    padding: 5px;
+    border-radius: 10px;
+  }
+  
+  .materias{
+    background-color: white;
+    padding: 10px 60px;
+    border-radius: 10px;
+  }
+  .materias button {
+    background-color: #fff;
+    color: #0056b3;
+    padding: 5px 20px;
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+  }
+  
+  .opcoes button {
+    margin: 5px;
+    padding: 15px;
+    width: 100px;
+  }
+  
+  #proximo {
+    margin-top: 20px;
+  }
+  
+}
+.login-form{
     margin: 20px 40px;
     background-color: #fff;
     padding: 10px;
