--- a/style.css
+++ b/style.css
@@ -117,10 +117,13 @@
   background-color: white;
   color: #007BFF;
   border: 2px solid #007BFF;
-  padding: 15px;
+  padding: 15px 20px;
   width: 100%;
   margin: 0;
   font-weight: bold;
+  border-radius: 8px;
+  font-size: 16px;
+  transition: all 0.3s ease; /* Adicione esta linha */
 }
 
 .opcoes button:hover {
